apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin-1
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin-1
        app.kubernetes.io/component: server
    spec:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
            - key: node.kubernetes.io/type
              operator: In
              values:
              - gpu
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        securityContext:
          runAsUser: 1001
          runAsGroup: 1001
        resources:
          requests:
            nvidia.com/gpu.shared: 1
            memory: "1024Mi"
            cpu: "1.0"
          limits:
            nvidia.com/gpu.shared: 1
            memory: "2048Mi"
            cpu: "4.0"
        ports:
          - containerPort: 8096
          - containerPort: 1900
          - containerPort: 7359
        volumeMounts:
          - name:  config
            mountPath:  /config
          - name: cache
            mountPath: /cache
          - name: media 
            mountPath: /media 
      volumes:
        - name: config 
          nfs:
            server: storage-pve-02.int.prossertech.com
            path: /data/rke/jellyfin/config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-claim
        - name: media
          nfs:
            server: storage-pve-02.int.prossertech.com
            path: /data/media
