apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  labels:
    name: jellyfin-ingress
spec:
  rules:
  - host: jellyfin.int.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin-svc
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin-1
    app.kubernetes.io/component: server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8096
